--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -2,15 +2,6 @@
 @import url('http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic,300')
 @import url('http//fonts.googleapis.com/css?family=Quicksand')
 
-body 
-  padding 50px
-  font 14px "Lucida Grande", Helvetica, Arial, sans-serif
-
-
-a 
-  color #00B7FF
-
-
 /* =========================================
    Typography
    =========================================
@@ -75,3 +66,14 @@ h1, h2, h3, h4, h5, p, a, small, li, label, td, tr
   margin-top 66px
   padding 22px
 
+.indent
+  margin-left 20px
+
+.commentBox
+  margin-left 20px
+
+.commentList
+  margin-left 30px
+
+.commentForm
+  margin-left 30px
