--- a/views/test/react.jade
+++ b/views/test/react.jade
@@ -2,7 +2,5 @@ extends ../layouts/body
 
 block content
   .row.desc
-    h1 Sample in React
-    h3(class="subheader") Let's see if this works out...
-
+    h1 React Sample
   #example
