--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,5 +1,56 @@
 @import url("http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic,300");
 @import url("http//fonts.googleapis.com/css?family=Quicksand");
+.box {
+  background-color: #e6e6fa;
+  height: 100px;
+  width: 100px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+.rect {
+  background-color: #d3d3d3;
+  height: 160px;
+  width: 100%;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+.margin {
+  margin: 10px;
+}
+.marginb {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+p,
+.title {
+  background-color: #e6e6fa;
+  padding: 5px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+.para {
+  padding: 10px;
+}
+.center {
+  text-align: center;
+}
+.button {
+  background-color: #dda0dd;
+  color: #000;
+  font-family: "Lato";
+}
+.button:hover,
+.button:focus {
+  background-color: #ffc0cb;
+  color: #000;
+  font-family: "Lato";
+}
+.bgwhite {
+  background-color: #fff;
+}
+.padding-left {
+  padding-left: 5px;
+}
 /* =========================================
    Typography
    =========================================
