--- a/public/stylesheets/app.styl
+++ b/public/stylesheets/app.styl
@@ -1,6 +1,7 @@
 @import 'nib'
 @import url('http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic,300')
 @import url('http//fonts.googleapis.com/css?family=Quicksand')
+@import "grid.styl"
 
 /* =========================================
    Typography
